test_regress/t/t_randomize_null_arr_unsup.out
%Error-UNSUPPORTED: t/t_randomize_null_arr_unsup.v:44:14: Unsupported: 'randomize(null)' on class with rand container or class member (IEEE 1800-2023 18.11; MVP supports scalar rand vars only)
                                                        : ... note: In instance 't'
   44 |     void'(fq.randomize(null));
      |              ^~~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_randomize_null_arr_unsup.v:45:14: Unsupported: 'randomize(null)' on class with rand container or class member (IEEE 1800-2023 18.11; MVP supports scalar rand vars only)
                                                        : ... note: In instance 't'
   45 |     void'(fu.randomize(null));
      |              ^~~~~~~~~
%Error-UNSUPPORTED: t/t_randomize_null_arr_unsup.v:46:14: Unsupported: 'randomize(null)' on class with rand container or class member (IEEE 1800-2023 18.11; MVP supports scalar rand vars only)
                                                        : ... note: In instance 't'
   46 |     void'(fd.randomize(null));
      |              ^~~~~~~~~
%Error-UNSUPPORTED: t/t_randomize_null_arr_unsup.v:47:14: Unsupported: 'randomize(null)' on class with rand container or class member (IEEE 1800-2023 18.11; MVP supports scalar rand vars only)
                                                        : ... note: In instance 't'
   47 |     void'(fa.randomize(null));
      |              ^~~~~~~~~
%Error-UNSUPPORTED: t/t_randomize_null_arr_unsup.v:48:14: Unsupported: 'randomize(null)' on class with rand container or class member (IEEE 1800-2023 18.11; MVP supports scalar rand vars only)
                                                        : ... note: In instance 't'
   48 |     void'(fw.randomize(null));
      |              ^~~~~~~~~
%Error: Exiting due to
